# PhantomTrace

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  run.bat
config/: settings.json
modules/: domain_lookup.py  email_intel.py  ip_lookup.py  phone_lookup.py  social_media.py  username_lookup.py
reports/: 20260416_170920_ip_1.1.1.1.html  20260416_170920_ip_1.1.1.1.json
utils/: api_handler.py  formatter.py  logger.py  reporter.py
